--- a/src/components/Gallery/Gallery.module.css
+++ b/src/components/Gallery/Gallery.module.css
@@ -3,3 +3,12 @@
   justify-content: center;
   align-items: center;
 }
+
+.whatever {
+  position: relative;
+}
+
+.BeastsModal {
+  position: absolute;
+  top: 50px;
+}
