--- a/src/components/Gallery/Gallery.module.css
+++ b/src/components/Gallery/Gallery.module.css
@@ -1,14 +1,17 @@
+.Gallery {
+  position:relative;
+  /* display: flex */
+}
+
+.Modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  
+}
+
 .row {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.whatever {
-  position: relative;
-}
-
-.BeastsModal {
-  position: absolute;
-  top: 50px;
 }
