--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
-/* .App {;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+div {
+  position: relative;
+}
+
+/* .selectedBeast {
+  position: absolute;
+  top: 50%;
+  left: 50%;
 } */
